[package]
name = "ddc-enhanced-rs"
version = "1.0.0"
authors = ["Alexandre MONIER <alexandre.monierc@gmail.com>"]
description = "DDC/CI high level library for Rust (cross platform)"
documentation = "https://docs.rs/ddc-enhanced-rs"
homepage = "https://github.com/ThalusA/ddc-enhanced-rs#readme"
readme = "README.md"
repository = "https://github.com/ThalusA/ddc-enhanced-rs"
edition = "2021"
license = "MIT"
keywords = ["DDC", "DDC-CI"]
categories = ["external-ffi-bindings", "os::linux-apis", "os::macos-apis", "os::windows-apis"]
exclude = ["ddc_enhanced_rs.node"]

[features]
default = []
node-bindings = ["neon"]

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
ddc = "0.2.2"
ddc-hi = "0.4.1"
neon = { version = "0.10.0", default-features = false, features = ["napi-latest"], optional = true }
once_cell = "1.10.0"